<resources>
    <string name="app_name">Lab4</string>
    <string name="domingo2">Domingo</string>

    <string name="update">Actualización disponible</string>
    <string name="date">31 de julio</string>
    <string name="endButton">Terminar jornada</string>
    <string name="download">Descargar</string>
    <string name="description">descripcionX</string>

    <string name="restaurant">Denny´s</string>
    <string name="direction">C.C. Paseo Liberación - Zona 9 - Guatemala</string>
    <string name="opening">Abierto 24 horas</string>

    <string name="start">Inicio</string>
    <string name="details">Detalles</string>
    
    <string name="visit">Iniciar visita</string>
    
    <string name="additionalInfo">Información adicional</string>
    <string name="serviceHours">Horario de atención</string>
    <string name="phone">Teléfono</string>
    <string name="number">2292-5151</string>
    <string name="call">Llamar</string>
</resources>